[gd_scene load_steps=2 format=3 uid="uid://c5d8r7n2kpf1e"]

[ext_resource type="Script" path="res://systems/dialogue/dialogue_box.gd" id="1_dlg"]

[node name="DialogueBox" type="CanvasLayer"]
layer = 3
script = ExtResource("1_dlg")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="Portrait" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 104.0
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue text goes here."
fit_content = true
scroll_active = false

[node name="AdvanceIndicator" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
